--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.coordinates">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -19,7 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BrandingActivity"></activity>
+        <activity android:name=".AddBrandingActivity"></activity>
+        <activity android:name=".BrandingActivity" />
 
         <uses-library
             android:name="org.apache.http.legacy"
@@ -43,8 +45,7 @@
             android:enabled="true"
             android:exported="true"
             android:foregroundServiceType="location"
-            android:stopWithTask="false">
-        </service>
+            android:stopWithTask="false"></service>
 
         <receiver
             android:name=".MyBroadcastReceiver"
@@ -54,7 +55,6 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-
     </application>
 
 </manifest>
