--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.coordinates">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -11,17 +12,30 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.PACKAGE_USAGE_STATS"
+        tools:ignore="ProtectedPermissions" />
 
     <application
-        android:name=".App"
+        android:name=".main.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddBrandingActivity"></activity>
-        <activity android:name=".BrandingActivity" />
+        <activity android:name=".appusage.activities.AppUsageActivity" />
+        <activity android:name=".location.activities.LocationActivity" />
+        <activity android:name=".location.activities.BrandingActivity" />
+        <activity android:name=".location.activities.AddBrandingActivity" />
+        <activity android:name=".location.activities.MapActivity" />
+        <activity android:name=".main.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <uses-library
             android:name="org.apache.http.legacy"
@@ -31,30 +45,24 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_key" />
 
-        <activity android:name=".MapActivity" />
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
         <service
-            android:name=".LocationService"
+            android:name=".location.services.LocationService"
             android:enabled="true"
             android:exported="true"
             android:foregroundServiceType="location"
-            android:stopWithTask="false"></service>
-
-        <receiver
-            android:name=".MyBroadcastReceiver"
+            android:stopWithTask="false" />
+        <service
+            android:name=".appusage.services.AppUsageService"
             android:enabled="true"
-            android:exported="true">
+            android:exported="true"
+            android:stopWithTask="false" />
+
+        <receiver android:name=".main.SchedulerSetupReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+        <receiver android:name=".main.SchedulerEventReceiver"></receiver>
     </application>
 
 </manifest>
